# lynqo

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  THIRD_PARTY_LICENSES.md  config.py  index.html  llms.txt  package-lock.json  package.json
.github/: release.yml
.github/workflows/: ci.yml  publish-desktop.yml  release-updater.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: lifecycle.rs  mod.rs  server_cmd.rs  status.rs  transfer_cmd.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/server/: download.rs  handlers.rs  mod.rs  ws.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/transfer/: mod.rs
src/composables/: useConnectPanel.ts  useDragDrop.ts  useLegalConsent.ts  useMobileTransfers.ts  useTheme.ts
src/config/: legal.ts
src/content/: legalDocuments.ts
src/i18n/: index.ts  messages.ts
src/layouts/: DesktopLayout.vue  MobileLayout.vue
src/pages/: AboutPage.vue  DevicesPage.vue  HelpPage.vue  HomePage.vue  LegalDocumentPage.vue  MobileSendPage.vue  MobileTransferPage.vue  NotFoundPage.vue  ReceivedFilesPage.vue  SettingsPage.vue  TransfersPage.vue
src/router/: index.ts
src/services/: api.ts  tauri.ts  upload.ts  websocket.ts
src/stores/: app.ts  devices.ts  mobileSession.ts  settings.ts  transfers.ts
src/styles/: animations.css  global.css  tokens.css
src/types/: index.ts
src/utils/: format.ts
(+25 files in other folders)
